2007-09-11  Joel Brobecker  <brobecker@adacore.com>

	GDB 6.7 branch created (branch timestamp: 2007-09-07 14:00 UTC)
	* version.in: Bump version to 6.6.90.20070907-cvs.

2007-09-07  2007-09-07  Pierre Muller  <muller@ics.u-strasbg.fr>

	 * p-valprint.c: Fix 7 ARI reported problems.
	 (pascal_val_print): Fix one operator at end of line issue.
	 Use paddress function to remove use of
	 deprecated_print_address_numeric function (2 times).
	 Use SYMBOL_LINKAGE_NAME instead of DEPRECATED_SYMBOL_NAME.
	 (pascal_value_print): Fix 3 operator at end of line issues.

2007-09-07  Daniel Jacobowitz  <dan@codesourcery.com>

	PR gdb/2103
	* arm-tdep.c (arm_in_call_stub): Delete.
	(arm_skip_stub): Handle from_arm and from_thumb stubs.

2007-09-06  Daniel Jacobowitz  <dan@codesourcery.com>

	* ppc-sysv-tdep.c (do_ppc_sysv_return_value): Handle other integer
	types.

2007-09-04  Daniel Jacobowitz  <dan@codesourcery.com>
	    Jim Blandy  <jimb@codesourcery.com>

	* NEWS: Update description of string changes.  Mention print/s.
	* c-valprint.c (textual_element_type): New.
	(c_val_print): Use it.  Do not skip address printing for pointers
	with a string format.
	(c_value_print): Doc update.
	* dwarf2read.c (read_array_type): Use make_vector_type.
	* gdbtypes.c (make_vector_type): New.
	(init_vector_type): Use it.
	(gdbtypes_post_init): Initialize builtin_true_unsigned_char.
	(_initialize_gdbtypes): Mark int8_t and uint8_t as TYPE_FLAG_NOTTEXT.
	* gdbtypes.h (struct builtin_type): Add builtin_true_unsigned_char.
	(TYPE_FLAG_NOTTEXT, TYPE_NOTTEXT): New.
	(make_vector_type): New.
	* printcmd.c (print_formatted): Only handle 's' and 'i' for examine.
	Call the language print routine for string format.
	(print_scalar_formatted): Call val_print for string format.  Handle
	unsigned original types for char format.
	(validate_format): Do not reject string format.
	* stabsread.c (read_type): Use make_vector_type.
	* xml-tdesc.c (tdesc_start_vector): Use init_vector_type.
