@@ -1,3 +1,8 @@
+2007-09-18  Joel Brobecker  <brobecker@adacore.com>
+
+	* ia64-tdep.c (refine_prologue_limit): Make sure we don't scan
+	the linetable past the function end.
+
 2007-09-11  Joel Brobecker  <brobecker@adacore.com>
 
 	GDB 6.7 branch created (branch timestamp: 2007-09-07 14:00 UTC)
